aloft-server/gen/org/extendedweb/aloft/server/grammar/antlr/AloftParser.java
// Generated from C:/Users/ryanfitzgerald/Development/aloft/aloft-server/src/main/java/org/extendedweb/aloft/server/grammar/antlr/Aloft.g4 by ANTLR 4.13.2
package org.extendedweb.aloft.server.grammar.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AloftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		QUERY_KEYWORD=1, AS_KEYWORD=2, CONSTRUCTOR_KEYWORD=3, CALLABLE_KEYWORD=4, 
		SOURCE_KEYWORD=5, MODULE_KEYWORD=6, THEME_KEYWORD=7, ELEMENT_KEYWORD=8, 
		COMPONENT_KEYWORD=9, ANIMATION_KEYWORD=10, ROUTES_KEYWORD=11, PAGE_KEYWORD=12, 
		MODEL_KEYWORD=13, PROJECT_KEYWORD=14, THROUGH_KEYWORD=15, DECIMALS=16, 
		DIGITS=17, HTML_ELEMENT=18, NAMED=19, NAMED_VAR=20, QUOTED_STRING=21, 
		ARRAY_TYPE_SUFFIX=22, UPDATE_TYPE=23, DOT_SEPARATOR=24, VOID_TYPE=25, 
		RETURN_KEYWORD=26, ISSET_KEYWORD=27, IF_KEYWORD=28, OPEN_PARENTHESES=29, 
		CLOSE_PARENTHESES=30, ELSE=31, ELSE_IF=32, COMMA=33, REQUIRED_FIELD=34, 
		VAR_MAGIC=35, VAR_TYPES=36, QUERY_SELECT_ALL=37, LOOP_name_declaration=38, 
		SWITCH_KEYWORD=39, SWITCH_CURLY_BLOCK=40, VARIABLE_ARGS=41, CONDITIONAL_IF=42, 
		CONDITIONAL_ELSE=43, OPERATORS=44, NULL_VALUE=45, EMPTY_PARENTHESIS=46, 
		GOTO_KEYWORD=47, THIS_KEYWORD=48, DOT=49, FILE_NAME=50, STATIC_ACCESS=51, 
		COLON=52, EQUALS=53, NOT=54, APPEND_ADD=55, APPEND_SUBTRACT=56, PATH_START=57, 
		OPEN_BRACKETS=58, CLOSE_BRACKETS=59, OPEN_BRACES=60, CLOSE_BRACES=61, 
		END_OF_FILE=62, QUOTES=63, STATEMENT_END=64, BC=65, LC=66, WS=67, NAMED_DOT=68;
	public static final int
		RULE_r = 0, RULE_syntax = 1, RULE_function_syntax = 2, RULE_component = 3, 
		RULE_element = 4, RULE_theme = 5, RULE_model = 6, RULE_routes = 7, RULE_routes_through = 8, 
		RULE_project = 9, RULE_page = 10, RULE_animation = 11, RULE_module = 12, 
		RULE_query = 13, RULE_source = 14, RULE_callable = 15, RULE_constructor = 16, 
		RULE_number = 17, RULE_path_with_var = 18, RULE_path_var = 19, RULE_path = 20, 
		RULE_array = 21, RULE_string = 22, RULE_param_values = 23, RULE_var_args = 24, 
		RULE_property = 25, RULE_return_value = 26, RULE_html_element = 27, RULE_component_tree = 28, 
		RULE_function = 29, RULE_function_declaration = 30, RULE_update = 31, 
		RULE_update_declaration = 32, RULE_function_call = 33, RULE_function_types = 34, 
		RULE_declare_variable = 35, RULE_assign_variable = 36, RULE_variable = 37, 
		RULE_var_names = 38, RULE_this = 39, RULE_any_var = 40, RULE_name_declaration = 41, 
		RULE_private_named = 42, RULE_private_named_multiple = 43, RULE_var_name_with_params = 44, 
		RULE_var_name = 45, RULE_expression = 46, RULE_expression_value = 47, 
		RULE_var_expression = 48, RULE_assignment = 49, RULE_return = 50, RULE_isset = 51, 
		RULE_empty_function = 52, RULE_if = 53, RULE_var_access = 54, RULE_required_field = 55, 
		RULE_static_field = 56, RULE_var_options = 57, RULE_var_type = 58, RULE_property_value = 59, 
		RULE_static_var = 60, RULE_return_property_value = 61, RULE_loop = 62, 
		RULE_switch_block = 63, RULE_curly_block = 64, RULE_function_curly_block = 65, 
		RULE_named_with_params_special = 66, RULE_vars_with_params_special = 67, 
		RULE_var_param = 68, RULE_named_switch = 69, RULE_enclosed_vars = 70, 
		RULE_goto = 71, RULE_file_name = 72;
	private static String[] makeRuleNames() {
		return new String[] {
			"r", "syntax", "function_syntax", "component", "element", "theme", "model", 
			"routes", "routes_through", "project", "page", "animation", "module", 
			"query", "source", "callable", "constructor", "number", "path_with_var", 
			"path_var", "path", "array", "string", "param_values", "var_args", "property", 
			"return_value", "html_element", "component_tree", "function", "function_declaration", 
			"update", "update_declaration", "function_call", "function_types", "declare_variable", 
			"assign_variable", "variable", "var_names", "this", "any_var", "name_declaration", 
			"private_named", "private_named_multiple", "var_name_with_params", "var_name", 
			"expression", "expression_value", "var_expression", "assignment", "return", 
			"isset", "empty_function", "if", "var_access", "required_field", "static_field", 
			"var_options", "var_type", "property_value", "static_var", "return_property_value", 
			"loop", "switch_block", "curly_block", "function_curly_block", "named_with_params_special", 
			"vars_with_params_special", "var_param", "named_switch", "enclosed_vars", 
			"goto", "file_name"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "'switch'", "'...'", "' ? '", "' : '", null, 
			null, null, null, null, null, null, "'::'", null, "'='", "'!'", "'++'", 
			"'--'", null, "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "QUERY_KEYWORD", "AS_KEYWORD", "CONSTRUCTOR_KEYWORD", "CALLABLE_KEYWORD", 
			"SOURCE_KEYWORD", "MODULE_KEYWORD", "THEME_KEYWORD", "ELEMENT_KEYWORD", 
			"COMPONENT_KEYWORD", "ANIMATION_KEYWORD", "ROUTES_KEYWORD", "PAGE_KEYWORD", 
			"MODEL_KEYWORD", "PROJECT_KEYWORD", "THROUGH_KEYWORD", "DECIMALS", "DIGITS", 
			"HTML_ELEMENT", "NAMED", "NAMED_VAR", "QUOTED_STRING", "ARRAY_TYPE_SUFFIX", 
			"UPDATE_TYPE", "DOT_SEPARATOR", "VOID_TYPE", "RETURN_KEYWORD", "ISSET_KEYWORD", 
			"IF_KEYWORD", "OPEN_PARENTHESES", "CLOSE_PARENTHESES", "ELSE", "ELSE_IF", 
			"COMMA", "REQUIRED_FIELD", "VAR_MAGIC", "VAR_TYPES", "QUERY_SELECT_ALL", 
			"LOOP_name_declaration", "SWITCH_KEYWORD", "SWITCH_CURLY_BLOCK", "VARIABLE_ARGS", 
			"CONDITIONAL_IF", "CONDITIONAL_ELSE", "OPERATORS", "NULL_VALUE", "EMPTY_PARENTHESIS", 
			"GOTO_KEYWORD", "THIS_KEYWORD", "DOT", "FILE_NAME", "STATIC_ACCESS", 
			"COLON", "EQUALS", "NOT", "APPEND_ADD", "APPEND_SUBTRACT", "PATH_START", 
			"OPEN_BRACKETS", "CLOSE_BRACKETS", "OPEN_BRACES", "CLOSE_BRACES", "END_OF_FILE", 
			"QUOTES", "STATEMENT_END", "BC", "LC", "WS", "NAMED_DOT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Aloft.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AloftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(AloftParser.EOF, 0); }
		public List<SyntaxContext> syntax() {
			return getRuleContexts(SyntaxContext.class);
		}
		public SyntaxContext syntax(int i) {
			return getRuleContext(SyntaxContext.class,i);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AloftListener ) ((AloftListener)listener).enterR(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AloftListener ) ((AloftListener)listener).exitR(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AloftVisitor ) return ((AloftVisitor<? extends T>)visitor).visitR(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(147); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(146);
				syntax();
				}
				}
				setState(149); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 2252160633438194L) != 0) );
			setState(151);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SyntaxContext extends ParserRuleContext {
		public LoopContext loop() {
			return getRuleContext(LoopContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public UpdateContext update() {
			return getRuleContext(UpdateContext.class,0);
		}
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public SourceContext source() {
			return getRuleContext(SourceContext.class,0);
		}
		public ComponentContext component() {
			return getRuleContext(ComponentContext.class,0);
		}
		public ProjectContext project() {
			return getRuleContext(ProjectContext.class,0);
		}
		public ElementContext element() {
			return getRuleContext(ElementContext.class,0);
		}
		public ModelContext model() {
			return getRuleContext(ModelContext.class,0);
		}
		public ThemeContext theme() {
			return getRuleContext(ThemeContext.class,0);
		}
		public CallableContext callable() {
			return getRuleContext(CallableContext.class,0);
		}
		public RoutesContext routes() {
			return getRuleContext(RoutesContext.class,0);
		}
		public PageContext page() {
			return getRuleContext(PageContext.class,0);
		}
		public AnimationContext animation() {
			return getRuleContext(AnimationContext.class,0);
		}
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public PropertyContext property() {
			return getRuleContext(PropertyContext.class,0);
		}
		public Declare_variableContext declare_variable() {
			return getRuleContext(Declare_variableContext.class,0);
		}
		public SyntaxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_syntax; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AloftListener ) ((AloftListener)listener).enterSyntax(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AloftListener ) ((AloftListener)listener).exitSyntax(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AloftVisitor ) return ((AloftVisitor<? extends T>)visitor).visitSyntax(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SyntaxContext syntax() throws RecognitionException {
		SyntaxContext _localctx = new SyntaxContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_syntax);
		try {
			setState(170);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				loop();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				function();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(155);
				update();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(156);
				query();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(157);
				source();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(158);
				component();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(159);
				project();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(160);
				element();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(161);
				model();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(162);
				theme();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(163);
				callable();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(164);
				routes();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(165);
				page();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(166);
				animation();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(167);
				module();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(168);
				property();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(169);
				declare_variable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Function_syntaxContext extends ParserRuleContext {
		public Switch_blockContext switch_block() {
			return getRuleContext(Switch_blockContext.class,0);
		}
		public IfContext if_() {
			return getRuleContext(IfContext.class,0);
		}
		public Assign_variableContext assign_variable() {
			return getRuleContext(Assign_variableContext.class,0);
		}
		public ConstructorContext constructor() {
			return getRuleContext(ConstructorContext.class,0);
		}
		public Function_callContext function_call() {
			return getRuleContext(Function_callContext.class,0);
		}
		public ReturnContext return_() {
			return getRuleContext(ReturnContext.class,0);
		}
		public Declare_variableContext declare_variable() {
			return getRuleContext(Declare_variableContext.class,0);
		}
		public Function_syntaxContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_syntax; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AloftListener ) ((AloftListener)listener).enterFunction_syntax(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AloftListener ) ((AloftListener)listener).exitFunction_syntax(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AloftVisitor ) return ((AloftVisitor<? extends T>)visitor).visitFunction_syntax(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Function_syntaxContext function_syntax() throws RecognitionException {
		Function_syntaxContext _localctx = new Function_syntaxContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_function_syntax);
		try {
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(172);
				switch_block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(173);
				if_();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(174);
				assign_variable();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(175);
				constructor();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(176);
				function_call();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(177);
				return_();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(178);
				declare_variable();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
